<resources>
    <string name="app_name">Bhakti Sangrahalay</string>
    <string name="view_all"><u>सभी देखें</u></string>
    <string name="aartiyan">आरतियां</string>
    <string name="chalisha">चालीसा</string>
    <string name="other">अन्य</string>
    <string name="hanuman_ji">हनुमान जी</string>
    <string name="ganesh_ji">गणेश जी </string>
    <string name="durga_ji">दुर्गा जी</string>
    <string name="shiv_ji">शंकर जी</string>
    <string name="shyam_ji">श्याम जी</string>
    <string name="santoshi_mata">संतोषी माता</string>
    <string name="lakshmi_mata">लक्ष्मी माता</string>
    <string name="srasvati_mata">सरस्वती माता</string>
    <string name="vishnu_ji">विष्णु जी</string>
    <string name="shani_dev">शनि देव</string>
    <string name="aarti">आरती</string>
    <string name="sampurn_sunder_kaand">सम्पूर्ण\nसुंदरकांड</string>
    <string name="hanuman_cahlisa">हनुमान\nचालीसा</string>
    <string name="ganesh_cahlisa">गणेश\nचालीसा </string>
    <string name="durga_cahlisa">दुर्गा\nचालीसा</string>
    <string name="shiv_cahlisa">शंकर\nचालीसा</string>
    <string name="dharmik_kathayen">धार्मिक\nकथाएं</string>
    <string name="vart_kathayen">व्रत\nकथाएं</string>
    <string name="vart_kathayen1">व्रत कथाएं</string>
    <string name="calendar">कैलेंडर</string>
    <string name="mantra_sangrah">मंत्र \nसंग्रह</string>
    <string name="mantra">मंत्र</string>
    <string name="Shortha">सोरठा</string>
    <string name="Chhand">छंद</string>
    <string name="Chopai">चौपाई</string>
    <string name="Doha">दोहा</string>
    <string name="Sunder_kand">सुंदरकांड</string>
    <string name="Dash_board">डैशबोर्ड</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="lakshmi_cahlisa">लक्ष्मी चालीसा</string>
    <string name="devuthani_vart_katha"> देवउठनी एकादशी व्रतकथा </string>
    <string name="purnmashi_vart_katha"> पूर्णमासी व्रत कथा </string>
    <string name="solah_somvar_vart_katha">सोलह सोमवार व्रत कथा </string>
    <string name="chath_puja_vart_katha">छठ पूजा व्रत कथा</string>
    <string name="hanumanji_ki_katha">हनुमान: बालपन, शिक्षा एवं शाप</string>
    <string name="navratri_katha">नवरात्री की कथा</string>
    <string name="kuru_ka_janm_katha">कुरु का जन्म</string>
    <string name="shri_krishan_katha">श्रीकृष्ण दौड़े चले आये</string>
    <string name="kunti_ka_tyag_katha">कुंती का त्याग</string>
    <string name="janesh_ji_thag_katha">जब ठगे गए गणेशजी</string>
    <string name="saptahik_vart_katha">साप्ताहिक व्रत कथा</string>
    <string name="vishisht_vart_katha">विशिष्ट व्रत एवं कथा</string>
    <string name="ekadashi_vart_katha">एकादशी व्रत कथा</string>
    <string name="navratri_vart_katha">नवरात्री व्रत कथा</string>
    <string name="satyanarayan_vart_katha">सत्यनारायण व्रत कथा</string>
    <string name="sunday_vart_katha">रविवार व्रत कथा</string>
    <string name="monday_vart_katha">सोमवार व्रत कथा</string>
    <string name="tuesday_vart_katha">मंगलवार व्रत कथा</string>
    <string name="wednesday_vart_katha">बुधवार व्रत कथा</string>
    <string name="thrusday_vart_katha">गुरुवार व्रत कथा</string>
    <string name="friday_vart_katha">शुक्रवार व्रत कथा</string>
    <string name="saturday_vart_katha">शनिवार व्रत कथा</string>
    <string name="ahhoi_vart_katha">अहोई व्रत कथा</string>
    <string name="bhai_dooj_vart_katha"> भैया दूज व्रत कथा</string>
    <string name="gangaur_vart_katha">गणगौर व्रत कथा</string>
    <string name="goverdhan_vart_katha"> गोवेर्धन व्रत कथा</string>
    <string name="hartalika_teez_vart_katha"> हरतालिका तीज व्रत कथा</string>
    <string name="holika_vart_katha"> होलिका व्रत कथा</string>
    <string name="karvachauth_vart_katha">करवाचौथ व्रत कथा</string>
    <string name="mahalakshmi_vart_katha">महालक्ष्मी व्रत कथा</string>
    <string name="mangla_gauri_vart_katha">मंगला गौरी व्रत कथा</string>
    <string name="narsingh_jayanti_vart_katha"> नरसिंघ जयंती व्रत कथा</string>
    <string name="pradosh_vart_katha"> प्रदोष व्रत कथा</string>
    <string name="sankat_chturthi_vart_katha"> श्री गणेश संकट चतुर्थी व्रत कथा</string>
    <string name="santoshi_mata_vart_katha"> संतोषी माता व्रत कथा</string>
    <string name="satya_narayan_vart_katha"> सत्यनारायण व्रत कथा</string>
    <string name="sravan_somvar_vart_katha"> श्रावण सोमवार व्रत कथा</string>
    <string name="sarad_purnima_vart_katha"> शरद पूर्णिमा व्रत कथा</string>
    <string name="shiv_ratri_vart_katha"> शिवरात्रि व्रत कथा</string>
    <string name="vat_savitri_vart_katha"> वट सावित्री व्रत कथा</string>
    <string name="katha">कथा</string>
    <string name="pauranik_katha">पौराणिक कथाएं</string>
    <string name="aadhyatmik_katha">आध्यात्मिक कथाएं</string>
    <string name="vishnu_puran"> विष्णु पुराण</string>
    <string name="shiv_puran">शिव पुराण</string>
    <string name="app_share">एप्लीकेशन शेयर करें</string>
    <string name="app_rate"> एप्लीकेशन रेट करें</string>
    <string name="about_us"> हमारे बारे में</string>
    <string name="suggestion"> सुझाव</string>
    <string name="shlok">  वक्रतुण्ड महाकाय सूर्यकोटि समप्रभ।\nनिर्विघ्नं कुरु मे देव सर्वकार्येषु सर्वदा॥</string>
    <string name="panchan_shopan_manglacharan">  पंचम सोपान-मंगलाचरण</string>
    <string name="slok"> श्लोक</string>
    <string name="sunder_kaand">सुंदरकांड</string>
    <string name="internet_problem">इंटरनेट उपलब्ध नहीं, कृपया डिवाइस के इंटरनेट की जांच करें !</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="first_name">नाम</string>
    <string name="phone_number">फ़ोन नंबर</string>
    <string name="email_address">ईमेल एड्रेस</string>
    <string name="write_here">यहां लिखें…</string>
    <string name="send">भेजें</string>
    <string name="internet_connection">No Connection Available</string>
    <string name="horoscope">Horoscope</string>
    <string name="panchang">सम्पूर्ण पंचांग</string>
    <string name="kundli">कुंडली</string>
    <string name="Horoscope">Horoscope</string>
    <string name="daily_horoscope">Daily</string>
    <string name="weekly_horoscope">Weekly</string>
    <string name="monthly_horoscope">Monthly</string>
    <string name="yearly_horoscope">Yearly</string>
    <string name="general">General</string>
    <string name="family">Family</string>
    <string name="health">Health</string>
    <string name="love">Love</string>
    <string name="career">Career</string>
    <string name="money">Money</string>
    <string name="remedies">remedies</string>
    <string name="daily_panchang">दैनिक पंचांग</string>
    <string name="hora">होरा</string>
    <string name="Chogdia">चोघडिया</string>
    <string name="do_ghati">दो घटी</string>
    <string name="rahu_kaal">राहु काल</string>
    <string name="tithi">तिथि</string>
    <string name="nakshatra">नक्षत्र</string>
    <string name="karana">करण</string>
    <string name="paksha">पक्ष</string>
    <string name="yoga">योग</string>
    <string name="day">वार</string>
    <string name="sun_and_moon_calculations">Sun And Moon Calculations</string>
    <string name="sun_rises">Sun Rise</string>
    <string name="moon_rises">चंद्रोदय</string>
    <string name="moon_sign">चन्द्र राशि</string>
    <string name="sun_set">सूर्यास्त</string>
    <string name="moon_set">चन्द्रास्त</string>
    <string name="ritu">ऋतु</string>
    <string name="hindu_month_and_year">Hindu Month And Year</string>
    <string name="shaka_samvat">शक सम्वत</string>
    <string name="kali_samvat">कलि सम्वत</string>
    <string name="day_duration">दिन काल</string>
    <string name="vikram_samvat">विक्रम सम्वत</string>
    <string name="month_amanta">मास अमांत</string>
    <string name="month_purnimanta">मास पूर्णिमांत</string>
    <string name="disha_shoola">Disha Shoola</string>
    <string name="inauspicious_timings">Inauspicious Timings</string>
    <string name="auspicious_timings">Auspicious Timings</string>
    <string name="abhijit">अभिजित मुहूर्त</string>
    <string name="dushta_muhurtas">दुष्ट मुहूर्त</string>
    <string name="kantaka">कंटका/मृत्यु</string>
    <string name="yamaghanta">यमघण्ट</string>
    <string name="kulika">कुलिक</string>
    <string name="kalavela">कालवेला या अर्द्धयाम</string>
    <string name="yamaganda">यमगण्ड</string>
    <string name="gulika_kaal">गुलिक काल</string>
    <string name="muhurats">मुहूर्त</string>
    <string name="tarabalam">Tarabalam</string>
    <string name="chandrabalam">Chandrabalam</string>
    <string name="hora_table">Hora Table</string>
    <string name="saturn">शनि</string>
    <string name="venus">शुक्र</string>
    <string name="jupiter">गुरु</string>
    <string name="mercury">बुध</string>
    <string name="mars">मंगल</string>
    <string name="moon">चंद्र</string>
    <string name="sun">सूर्य</string>
    <string name="hora_meaning1">राजनीति, सरकारी कार्य , सरकारी नौकरी , अदालती कार्य , साहसिक क्रियाकलाप के लिए</string>
    <string name="hora_meaning2">यात्रा, रोमांस, गहने तथा कला सम्बन्धी के लिए</string>
    <string name="hora_meaning3">भूमि एवं कृषि, भाई, इंजीनियरिंग, खेल के लिए</string>
    <string name="hora_meaning4">व्यापार, ज्योतिष ,पढाई , लिखाई तथा सीखने के लिए </string>
    <string name="hora_meaning5">काम, रोजगार, व्यापार और सभी शुभ कार्यों के लिए</string>
    <string name="hora_meaning6">प्यार, शादी, गहने सम्बन्धी , मनोरंजन, नृत्य के लिए</string>
    <string name="hora_meaning7">श्रम, लोहा, तेल, नौकरों, त्याग के लिए</string>
    <string name="pla_mean1">Auspicious for Politics and Govt job</string>
    <string name="pla_mean2">Auspicious for Travelling and art</string>
    <string name="pla_mean3">Auspicious for Property and sports</string>
    <string name="pla_mean4">Auspicious for Trade and learning</string>
    <string name="pla_mean5">Auspicious for Everything</string>
    <string name="pla_mean6">Auspicious for Romance and entertainment</string>
    <string name="pla_mean7">Auspicious for Tantra and spirituality</string>
    <string name="inauspicious">अशुभ</string>
    <string name="good">अच्छा</string>
    <string name="auspicious">शुभ</string>
    <string name="shubh">शुभ</string>
    <string name="rog">रोग</string>
    <string name="kaal">काल</string>
    <string name="amrut">अमृत</string>
    <string name="laabh">लाभ</string>
    <string name="chal">चल</string>
    <string name="udveg">उद्वेग</string>
    <string name="pratah">प्रातः</string>
    <string name="sangav">संगव</string>
    <string name="madhyahna">मध्याह्न</string>
    <string name="aparahna">अपराह्न</string>
    <string name="sayan">सायं</string>
    <string name="pradosh">प्रदोष</string>
    <string name="ratri">रात्रि</string>
    <string name="Sa">Sa</string>
    <string name="Ve">Ve</string>
    <string name="Ju">Ju</string>
    <string name="Me">Me</string>
    <string name="Ma">Ma</string>
    <string name="Mo">Mo</string>
    <string name="Su">Su</string>
    <string name="Shodashvarga">Shodashvarga</string>
    <string name="SS">SS</string>
    <string name="SB">SB</string>
    <string name="NL">NL</string>
    <string name="SL">SL</string>
    <string name="pla">Pla</string>
    <string name="sign">Sign</string>
    <string name="degree">Degree</string>
    <string name="naks">Naks</string>
    <string name="rel">Rel</string>
    <string name="rn">RN</string>
    <string name="dasha">Dasha</string>
    <string name="predictions">Predictions</string>
    <string name="kp_system">KP System</string>
    <string name="more">More</string>
    <string name="varshphal">Varshphal</string>
    <string name="lal_kitab">LalKitab</string>
    <string name="hou">Hou</string>
    <string name="t1">T1</string>
    <string name="t2">T2</string>
    <string name="t3">T3</string>
    <string name="t4">T4</string>
    <string name="bh">Bh</string>
    <string name="bh_begin">Bh.Begin</string>
    <string name="guna">Guna</string>
    <string name="maximum">Maximum</string>
    <string name="obtained">Obtained</string>
    <string name="area_of_life">Area Of Life</string>
</resources>