<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/rn_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/rn"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/su_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/Su"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/mo_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/Mo"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ma_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/Ma"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/me_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/Me"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ju_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/Ju"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ve_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/Ve"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sa_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/Sa"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tot_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/Sa"
        android:textSize="18sp" />

</LinearLayout>
