<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_pink"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/hou_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/hou"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/t1_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/t1"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/t2_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/t2"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/t3_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/t3"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/t4_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:text="@string/t4"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>