<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/bhav_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".4"
        android:text="@string/bh"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/beg_sign_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".7"
        android:text="@string/sign"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/bhav_beg_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/bh_begin"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/mid_sign_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".7"
        android:text="@string/sign"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/bhav_mid_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/Me"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>
