<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/hora_table_header"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/pla_name_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".7"
                    android:text="@string/pla"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pla_degree_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/degree"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pla_sl_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:text="@string/SL"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pla_nl_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:text="@string/NL"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pla_sb_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:text="@string/SB"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pla_ss_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:text="@string/SS"
                    android:textSize="18sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>